--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,11 +18,39 @@ header {
   padding-top: 1rem;
 }
 
+@media only screen and (max-width: 1024px) {
+  header {
+    height: 22rem;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  header {
+    background-position: 20%;
+    height: 17rem;
+  }
+}
+
 /*main container section*/
 
 .container {
   max-width: 960px;
   margin: auto;
+}
+
+@media only screen and (max-width: 1024px) {
+
+  .container {
+    max-width: 100%;
+  }
+
+}
+
+@media only screen and (max-width 480px) {
+  .container {
+    max-width: 100%;
+  }
 }
 
 /*header section */
@@ -46,6 +74,17 @@ ul li {
   display: inline;
 }
 
+ul .mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 480px) {
+ul {
+  display: none;
+  }
+
+}
+
 li {
   padding: 1rem 2rem 1rem 0;
 }
@@ -65,6 +104,17 @@ nav img {
   line-height: 1.2;
   font-size: 2rem;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 1024px) {
+  .main-welcome {
+    padding: 0.75rem 4rem;
+    margin-right: 2rem;
+    margin-top: 5rem;
+  }
+  .main-welcome span {
+    font-size: 1.33rem;
+  }
 }
 
 .flex {
